# app/Http/Requests/OfferUpdatorRequest.php
@@ -22,6 +22,36 @@ use Illuminate\Foundation\Http\FormRequest;
  *     @OA\Property(property="impound",  type="boolean", example="false"),
  *     @OA\Property(property="description",  type="string", example="asdasd"),
  *     @OA\Property(property="emails", ref="#/components/schemas/Email"),
+ *     @OA\Property(
+ *         property="partners",
+ *         type="array",
+ *         @OA\Items(
+ *     @OA\Property(property="id", type="string", example="1"),
+ *     @OA\Property(property="type", type="string", example="PROVIDER"),
+ *         )
+ *     ),
+ *     @OA\Property(
+ *         property="products",
+ *         type="array",
+ *         @OA\Items(
+ *     @OA\Property(property="discountDeferred", type="string", example="2"),
+ *     @OA\Property(property="discountOnCash", type="string", example="4"),
+ *     @OA\Property(property="minimum", type="integer", example="10"),
+ *     @OA\Property(property="minimumPerFamily", type="integer", example="15"),
+ *     @OA\Property(property="obrigatory", type="boolean", example="1"),
+ *     @OA\Property(property="variable", type="boolean", example="1"),
+ *     @OA\Property(property="family", type="boolean", example="0"),
+ *     @OA\Property(property="gift", type="boolean", example="0"),
+ *     @OA\Property(property="factoryPrice", type="string", example="10.00"),
+ *     @OA\Property(property="priceDeferred", type="string", example="11.00"),
+ *     @OA\Property(property="priceOnCash", type="string", example="10.51"),
+ *     @OA\Property(property="productOnName", type="string", example="Teste"),
+ *     @OA\Property(property="quantityMaximum", type="integer", example="6"),
+ *     @OA\Property(property="quantityMinimum", type="integer", example="10"),
+ *     @OA\Property(property="state_id", type="string", example="5"),
+ *     @OA\Property(property="product_id", type="string", example="5"),
+           )
+ *     ),
  * )
  */
 class OfferUpdatorRequest extends FormRequest
